[package]
name = "glium_text_nxt"
version = "0.15.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Text drawing with glium and freetype"
documentation = "https://docs.rs/glium_text"
repository = "https://github.com/tomaka/glium_text"
keywords = ["text", "opengl"]
license = "MIT"

[dependencies]
freetype-sys = "0.7"
libc = "0.2"

[dependencies.glium]
version = "0.23"
default-features = false

[dev-dependencies]
cgmath = "0.16"

[dev-dependencies.glium]
version = "0.27"
features = ["glutin"]
